Update api-hono with new authentication features and utilities
- Added support for two-factor authentication, including routes for generating and verifying TOTP codes, managing recovery codes, and enabling/disabling 2FA.
- Implemented user session management with cookies and JWTs.
- Introduced email utilities for sending OTPs and user notifications.
- Enhanced validation with Turnstile for security checks.
- Added new routes for user management, including password and name updates.
- Updated package dependencies in pnpm-lock.yaml and package.json.
- Refactored middleware to use a consistent type structure for Hono variables.
- Introduced utility functions for encryption and OTP generation.
- Created database services for website domain management.

--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -13,6 +13,10 @@
 		"@libsql/client": "^0.14.0",
 		"@libsql/linux-x64-gnu": "0.5.0-pre.5",
 		"@node-rs/argon2": "^2.0.0",
+		"arctic": "^2.3.0",
+		"uqr": "^0.1.2",
+		"@oslojs/binary": "^1.0.0",
+		"@oslojs/otp": "^1.1.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "1.1.0",
 		"@types/node": "^22.10.1",
@@ -20,6 +24,8 @@
 		"hono": "^4.6.12",
 		"lib": "workspace:*",
 		"db": "workspace:*",
-		"tsx": "^4.19.2"
+		"tsx": "^4.19.2",
+		"@hono/zod-validator": "^0.4.1",
+		"zod": "^3.23.8"
 	}
 }
