--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -13,6 +13,7 @@
 		"@libsql/client": "^0.14.0",
 		"@libsql/linux-x64-gnu": "0.5.0-pre.5",
 		"@node-rs/argon2": "^2.0.0",
+		"@types/google.maps": "^3.58.1",
 		"arctic": "^2.3.0",
 		"uqr": "^0.1.2",
 		"@oslojs/binary": "^1.0.0",
