Refactor package.json files to move dependencies to devDependencies
- Updated package.json files across multiple applications (auth-frontend-vue, dashboard-spa-vue, proxy-caddy, web-store-ssr-astro) to categorize dependencies under devDependencies for better clarity in dependency management.

--- a/apps/proxy-caddy/package.json
+++ b/apps/proxy-caddy/package.json
@@ -7,7 +7,7 @@
     "caddy:deploy": "pnpm format && dotenvx run -f .env.production --  bash -c 'cd ./deploy && ./_start.sh'",
     "prod:cache:purge": "dotenvx run -f .env.production --  bash -c 'curl -X PURGE \"https://auth.${PUBLIC_DOMAIN_NAME}/souin-api/${SOUIN_API_BASEPATH}/souin/flush\"' && echo '🚽Cache purged'"
   },
-  "dependencies": {
+  "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0"
   }
 }
