--- a/apps/auth-frontend-vue/package.json
+++ b/apps/auth-frontend-vue/package.json
@@ -9,7 +9,7 @@
     "build": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build",
     "start": "http-server dist -s -p 3001 -a 0.0.0.0 -d false --log-ip false --gzip --brotli --proxy http://127.0.0.1:3001?"
   },
-  "dependencies": {
+  "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
     "@types/node": "^22.10.1",
     "@vee-validate/zod": "^4.14.7",
