--- a/apps/dashboard-spa-vue/package.json
+++ b/apps/dashboard-spa-vue/package.json
@@ -9,7 +9,7 @@
     "build": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build",
     "start": "http-server dist -s -p 3004 -a 0.0.0.0 -d false --log-ip false --gzip --brotli --proxy http://127.0.0.1:3004?"
   },
-  "dependencies": {
+  "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.16",
