--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
   },
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
-    "package.json": "turbo.json, README.md, pnpm*, tailwind.*, vite.*, drizzle.config*, astro.config*, esbuild.*, .prettier*, nixpacks.toml, license.md, .gitignore, .cursorignore, tsconfig.*.json, *.d.ts, tsconfig.json, tsconfig.*.json, components.json, local-sqlite.db",
+    "package.json": "turbo.json, README.md, pnpm*, tailwind.*, vite.*, drizzle.config*, astro.config*, esbuild.*, .prettier*, nixpacks.toml, license.md, .gitignore, .cursorignore, tsconfig.*.json, *.d.ts, tsconfig.json, tsconfig.*.json, components.json, local-sqlite.db, .cursorrules",
     ".env": ".env*"
   }
 }
