Update Google OAuth redirect URIs and add api-client dependency in pnpm-lock.yaml

--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -24,6 +24,7 @@
 		"esbuild": "^0.24.0",
 		"hono": "^4.6.12",
 		"lib": "workspace:*",
+		"api-client": "workspace:*",
 		"db": "workspace:*",
 		"tsx": "^4.19.2",
 		"@hono/zod-validator": "^0.4.1",
