--- a/apps/api-hono/tsconfig.json
+++ b/apps/api-hono/tsconfig.json
@@ -21,6 +21,9 @@
       ],
       "@api-hono/*": [
         "./src/*"
+      ],
+      "@api-client/*": [
+        "../../packages/api-client/src/*"
       ]
     }
   }
