seed user creation

--- a/packages/db/.env
+++ b/packages/db/.env
@@ -1,2 +1,6 @@
 NODE_ENV="development"
 
+AUTHAPI_TURSO_DB_URL="hello"
+AUTHAPI_TURSO_DB_TOKEN="hello"
+# PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
+AUTHAPI_TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
