--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -35,6 +35,9 @@
       ],
       "@lib/*": [
         "../lib/src/*"
+      ],
+      "@api-hono/*": [
+        "../../apps/api-hono/src/*"
       ]
     }
   }
