--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,19 +9,21 @@
     "prod:migrate": "dotenvx run -f .env.production -- drizzle-kit migrate --config=drizzle.config.prod.ts",
     "test:prod:migrate": "dotenvx run -f .env.turso-migration -- tsx ./db/migrationTest.ts",
     "dev:drizzle-studio": "dotenvx run -- drizzle-kit studio --port=7022 --config=./drizzle.config.ts",
-    "dev:drizzle-migrate": "dotenvx run -- drizzle-kit migrate --config=./drizzle.config.ts"
+    "dev:drizzle-migrate": "dotenvx run -- drizzle-kit migrate --config=./drizzle.config.ts",
+    "dev:seed": "dotenvx run -f .env -- tsx ./src/seed/startSeed.ts"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
     "@libsql/client": "^0.14.0",
-    "@libsql/linux-x64-gnu": "0.5.0",
     "@libsql/darwin-arm64": "0.5.0",
+    "@libsql/linux-x64-gnu": "0.5.0",
     "@types/node": "^22.10.1",
     "drizzle-kit": "^0.29.1",
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "^0.6.1",
-    "zod": "^3.23.8",
+    "lib": "workspace:*",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "lib": "workspace:*"
+    "zod": "^3.23.8"
   }
 }
