--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
+    "@faker-js/faker": "^9.6.0",
     "@libsql/client": "^0.14.0",
     "@libsql/darwin-arm64": "0.5.0",
     "@libsql/linux-x64-gnu": "0.5.0",
