Refactor import paths to use the new alias '@auth-frontend-vue' for better clarity and consistency

--- a/apps/auth-frontend-vue/tsconfig.app.json
+++ b/apps/auth-frontend-vue/tsconfig.app.json
@@ -29,8 +29,7 @@
       "@/*": [
         "../../packages/ui-shadcn-vue/src/*"
       ],
-      // TODO: rename to @auth-frontend-vue
-      "@src/*": [
+      "@auth-frontend-vue/*": [
         "./src/*"
       ],
       "@lib/*": [
