Refactor import paths to use the new alias '@dashboard-spa-vue' for improved clarity and consistency

--- a/apps/dashboard-spa-vue/tsconfig.app.json
+++ b/apps/dashboard-spa-vue/tsconfig.app.json
@@ -29,8 +29,7 @@
       "@/*": [
         "../../packages/ui-shadcn-vue/src/*"
       ],
-      // TODO: rename to @dashboard-spa-vue
-      "@src/*": [
+      "@dashboard-spa-vue/*": [
         "./src/*"
       ],
       "@lib/*": [
