Refactor environment variable names to remove AUTHAPI prefix for improved clarity and consistency

--- a/apps/api-hono/.env
+++ b/apps/api-hono/.env
@@ -18,9 +18,9 @@ TURNSTILE_SECRET="1x0000000000000000000000000000000AA"
 GOOGLE_OAUTH_REDIRECT_URI_DEV_CADDY="https://auth.cart5dev.com/__p_api/auth/google_oauth/callback" # dev:caddy
 GOOGLE_OAUTH_REDIRECT_URI="http://localhost:3001/__p_api/auth/google_oauth/callback" # dev
 
-AUTHAPI_TURSO_DB_URL="hello"
-AUTHAPI_TURSO_DB_TOKEN="hello"
+TURSO_DB_URL="hello"
+TURSO_DB_TOKEN="hello"
 # PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
-AUTHAPI_TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
+TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
 
 RESEND_API_KEY=""
