--- a/apps/web-store-ssr-astro/.env
+++ b/apps/web-store-ssr-astro/.env
@@ -1,7 +1,7 @@
 NODE_ENV="development"
 PUBLIC_DOMAIN_NAME="cart5dev.com"
 
-AUTHAPI_TURSO_DB_URL="hello"
-AUTHAPI_TURSO_DB_TOKEN="hello"
+TURSO_DB_URL="hello"
+TURSO_DB_TOKEN="hello"
 # PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
-AUTHAPI_TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
+TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
