Refactor RestaurantAddressForm to improve map initialization handling and error messaging

--- a/packages/ui-shadcn-vue/tsconfig.app.json
+++ b/packages/ui-shadcn-vue/tsconfig.app.json
@@ -30,6 +30,9 @@
       ],
       "@lib/*": [
         "../lib/src/*"
+      ],
+      "@api-client/*": [
+        "../api-client/src/*"
       ]
     }
   },
