--- a/packages/ui-shadcn-vue/package.json
+++ b/packages/ui-shadcn-vue/package.json
@@ -25,6 +25,7 @@
     "lucide-vue-next": "^0.475.0",
     "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
+    "api-client": "workspace:*",
     "tailwindcss": "^3.4.16",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.2",
