Add currency_symbol column to restaurant_tax_settings table and update dependencies for sales tax handling

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -3,6 +3,8 @@
   "type": "module",
   "devDependencies": {
     "@types/luxon": "^3.4.2",
-    "luxon": "^3.5.0"
+    "currency-symbol-map": "^5.1.0",
+    "luxon": "^3.5.0",
+    "sales-tax": "^2.18.0"
   }
 }
