--- a/apps/api-hono/.env.production
+++ b/apps/api-hono/.env.production
@@ -38,3 +38,5 @@ DISCORD_WEBHOOK_URL="encrypted:BDtnwlrchOb77EnaAzS2mdj+5GBMnIZkWAB4O3ZqFDtVDdKVu
 DNS_CHECK_IPV4="188.245.218.196"
 DNS_CHECK_IPV6="2a01:4f8:1c1b:6632::1"
 DNS_CHECK_POINTER="dns-pointer.cart5.com"
+
+RUN_CRON="1"
