--- a/apps/dashboard-spa-vue/package.json
+++ b/apps/dashboard-spa-vue/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "dotenvx run -f .env -f .env.dev.secrets -- vite --port 3004",
     "dev:caddy": "pnpm dev",
-    "build": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build",
+    "build": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build && pnpm cf:pages:deploy",
+    "cf:pages:deploy": "dotenvx run -f .env.production -- wrangler pages deploy dist --project-name=cart5-dashboard-prod --branch=main --no-bundle",
     "start": "http-server dist -s -p 3004 -a 0.0.0.0 -d false --log-ip false --gzip --brotli --proxy http://127.0.0.1:3004?"
   },
   "devDependencies": {
@@ -18,11 +19,11 @@
     "@vee-validate/zod": "^4.14.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
     "@vueuse/core": "^12.0.0",
+    "api-client": "workspace:*",
+    "autoprefixer": "^10.4.20",
     "http-server": "^14.1.1",
     "lib": "workspace:*",
-    "api-client": "workspace:*",
     "lucide-vue-next": "^0.475.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
@@ -33,6 +34,7 @@
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.0",
     "vuedraggable": "^4.1.0",
+    "wrangler": "^4.3.0",
     "zod": "^3.23.8"
   }
 }
