Add Cloudflare Pages deployment script to build process and update package.json

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,6 +4,7 @@ nixPkgs = ['...', 'awscli2']
 [phases.build]
 cmds = [
     '...', 
+    'pnpm cf:pages:deploy'
     # Purge cache on production after build
     # 'cd apps/proxy-caddy && pnpm prod:cache:purge'
 ]
