--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "build": "turbo build",
+    "cf:pages:deploy": "turbo cf:pages:deploy",
     "dev": "turbo dev",
     "dev:caddy": "turbo dev:caddy",
     "start": "turbo start",
