--- a/apps/auth-frontend-vue/package.json
+++ b/apps/auth-frontend-vue/package.json
@@ -16,10 +16,10 @@
     "@vee-validate/zod": "^4.14.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "api-client": "workspace:*",
     "autoprefixer": "^10.4.20",
     "http-server": "^14.1.1",
     "lib": "workspace:*",
-    "api-client": "workspace:*",
     "lucide-vue-next": "^0.475.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
@@ -29,6 +29,7 @@
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.1",
     "vue-tsc": "^2.2.0",
+    "wrangler": "^4.3.0",
     "zod": "^3.23.8"
   }
 }
