--- a/apps/web-store-ssr-astro/package.json
+++ b/apps/web-store-ssr-astro/package.json
@@ -6,17 +6,19 @@
     "dev": "dotenvx run -- astro dev",
     "dev:caddy": "pnpm dev",
     "build": "dotenvx run -- astro check && dotenvx run -f .env.production -- astro build",
+    "cf:pages:deploy": "dotenvx run -f .env.production -- wrangler pages deploy dist/client --project-name=cart5-web-store-prod --branch=main --no-bundle",
     "start": "dotenvx run -f .env.production --  bash -c 'HOST=0.0.0.0 PORT=3002 node ./dist/server/entry.mjs'",
     "_start": "HOST=0.0.0.0 PORT=3002 dotenvx run -f .env.production -- node ./dist/server/entry.mjs"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.32.0",
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^9.0.0",
+    "@dotenvx/dotenvx": "^1.32.0",
     "@libsql/client": "^0.14.0",
+    "api-client": "workspace:*",
     "astro": "^5.0.2",
     "lib": "workspace:*",
-    "api-client": "workspace:*",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "wrangler": "^4.3.0"
   }
 }
