Add Sentry integration with middleware and global release declaration

--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -10,24 +10,26 @@
 	"devDependencies": {
 		"@dotenvx/dotenvx": "^1.32.0",
 		"@hono/node-server": "^1.13.7",
+		"@hono/zod-validator": "^0.4.1",
 		"@libsql/client": "^0.14.0",
 		"@libsql/linux-x64-gnu": "0.5.0-pre.5",
 		"@node-rs/argon2": "^2.0.0",
-		"@types/google.maps": "^3.58.1",
-		"arctic": "^2.3.0",
-		"uqr": "^0.1.2",
 		"@oslojs/binary": "^1.0.0",
-		"@oslojs/otp": "^1.1.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "1.1.0",
+		"@oslojs/otp": "^1.1.0",
+		"@sentry/esbuild-plugin": "^3.2.2",
+		"@types/google.maps": "^3.58.1",
 		"@types/node": "^22.10.1",
+		"api-client": "workspace:*",
+		"arctic": "^2.3.0",
+		"db": "workspace:*",
 		"esbuild": "^0.24.0",
 		"hono": "^4.6.12",
 		"lib": "workspace:*",
-		"api-client": "workspace:*",
-		"db": "workspace:*",
+		"toucan-js": "^4.1.1",
 		"tsx": "^4.19.2",
-		"@hono/zod-validator": "^0.4.1",
+		"uqr": "^0.1.2",
 		"zod": "^3.23.8"
 	}
 }
