Update TypeScript configuration to include global type definitions and add error handling comment in actions

--- a/apps/api-hono/tsconfig.json
+++ b/apps/api-hono/tsconfig.json
@@ -26,5 +26,9 @@
         "../../packages/api-client/src/*"
       ]
     }
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts"
+  ]
 }
