--- a/apps/dashboard-spa-vue/package.json
+++ b/apps/dashboard-spa-vue/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
+    "@sentry/vue": "^9.8.0",
+    "@sentry/vite-plugin": "^3.2.2",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.16",
     "@types/leaflet-draw": "^1.0.11",
