Add Tailwind CSS integration and global styles; update TypeScript config for module resolution

--- a/apps/web-store-ssr-astro/tsconfig.json
+++ b/apps/web-store-ssr-astro/tsconfig.json
@@ -11,7 +11,11 @@
       ],
       "@api-client/*": [
         "../../packages/api-client/src/*"
+      ],
+      "@/*": [
+        "../../packages/ui-shadcn-vue/src/*"
       ]
-    }
+    },
+    "jsx": "preserve"
   }
 }
