--- a/apps/web-store-ssr-astro/package.json
+++ b/apps/web-store-ssr-astro/package.json
@@ -15,11 +15,18 @@
     "@astrojs/node": "^9.1.3",
     "@dotenvx/dotenvx": "^1.32.0",
     "@libsql/client": "^0.14.0",
+    "@sentry/astro": "^9.8.0",
     "api-client": "workspace:*",
     "astro": "^5.5.4",
     "lib": "workspace:*",
+    "ui-shadcn-vue": "workspace:*",
     "typescript": "^5.7.2",
-    "wrangler": "^4.3.0",
-    "@sentry/astro": "^9.8.0"
+    "wrangler": "^4.3.0"
+  },
+  "dependencies": {
+    "@astrojs/vue": "^5.0.7",
+    "@tailwindcss/vite": "^4.0.15",
+    "tailwindcss": "^4.0.15",
+    "vue": "^3.5.13"
   }
 }
