--- a/apps/web-store-ssr-astro/package.json
+++ b/apps/web-store-ssr-astro/package.json
@@ -21,9 +21,7 @@
     "lib": "workspace:*",
     "ui-shadcn-vue": "workspace:*",
     "typescript": "^5.7.2",
-    "wrangler": "^4.3.0"
-  },
-  "dependencies": {
+    "wrangler": "^4.3.0",
     "@astrojs/vue": "^5.0.7",
     "@tailwindcss/vite": "^4.0.15",
     "tailwindcss": "^4.0.15",
