Add geocoding cache functionality with database integration and response caching

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,6 +19,7 @@
     "@libsql/client": "^0.14.0",
     "@libsql/darwin-arm64": "0.5.0",
     "@libsql/linux-x64-gnu": "0.5.0",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^22.10.1",
     "drizzle-kit": "^0.29.1",
     "drizzle-orm": "^0.38.3",
