--- a/apps/web-astro/package.json
+++ b/apps/web-astro/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^9.1.3",
+    "lucide-vue-next": "^0.475.0",
     "@dotenvx/dotenvx": "^1.32.0",
     "@libsql/client": "^0.14.0",
     "@sentry/astro": "^9.8.0",
