--- a/apps/web-astro/tsconfig.json
+++ b/apps/web-astro/tsconfig.json
@@ -14,6 +14,9 @@
       ],
       "@/*": [
         "../../packages/ui-shadcn-vue/src/*"
+      ],
+      "@web-astro/*": [
+        "./src/*"
       ]
     },
     "jsx": "preserve"
