--- a/apps/web-astro/package.json
+++ b/apps/web-astro/package.json
@@ -20,6 +20,7 @@
     "api-client": "workspace:*",
     "astro": "^5.5.4",
     "lib": "workspace:*",
+    "@vueuse/core": "^12.0.0",
     "ui-shadcn-vue": "workspace:*",
     "typescript": "^5.7.2",
     "wrangler": "^4.3.0",
