--- a/apps/web-astro/tsconfig.json
+++ b/apps/web-astro/tsconfig.json
@@ -20,5 +20,12 @@
       ]
     },
     "jsx": "preserve"
-  }
+  },
+  "include": [
+    ".astro/types.d.ts",
+    "**/*"
+  ],
+  "exclude": [
+    "dist"
+  ]
 }
