--- a/apps/web-astro/package.json
+++ b/apps/web-astro/package.json
@@ -6,6 +6,7 @@
     "dev": "dotenvx run -f .env -f .env.dev.secrets -- astro dev",
     "dev:caddy": "pnpm dev",
     "build": "dotenvx run -- astro check && dotenvx run -f .env.production -- astro build",
+    "builddev": "dotenvx run -- astro check && dotenvx run -f .env.production -- astro build",
     "cf:pages:deploy": "dotenvx run -f .env.production -- wrangler pages deploy dist/client --project-name=cart5-web-store-prod --branch=main --no-bundle",
     "start": "dotenvx run -f .env.production --  bash -c 'HOST=0.0.0.0 PORT=3002 node ./dist/server/entry.mjs'",
     "_start": "HOST=0.0.0.0 PORT=3002 dotenvx run -f .env.production -- node ./dist/server/entry.mjs"
