FCUK THEM ALL USER DATA STORES

--- a/apps/web-astro/tsconfig.json
+++ b/apps/web-astro/tsconfig.json
@@ -17,6 +17,9 @@
       ],
       "@web-astro/*": [
         "./src/*"
+      ],
+      "@api-hono/*": [
+        "../../apps/api-hono/src/*"
       ]
     },
     "jsx": "preserve"
