--- a/apps/web-astro/package.json
+++ b/apps/web-astro/package.json
@@ -16,9 +16,12 @@
     "@astrojs/node": "^9.1.3",
     "lucide-vue-next": "^0.475.0",
     "@dotenvx/dotenvx": "^1.32.0",
+    "@vee-validate/zod": "^4.14.7",
     "@libsql/client": "^0.14.0",
     "@sentry/astro": "^9.8.0",
     "api-client": "workspace:*",
+    "vee-validate": "^4.14.7",
+    "zod": "^3.23.8",
     "astro": "^5.5.4",
     "lib": "workspace:*",
     "@vueuse/core": "^12.0.0",
