--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -2,10 +2,12 @@
   "name": "lib",
   "type": "module",
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.782.0",
     "@types/luxon": "^3.4.2",
     "currency-symbol-map": "^5.1.0",
     "luxon": "^3.5.0",
     "sales-tax": "^2.18.0",
+    "sharp": "^0.34.0",
     "zod": "^3.23.8"
   }
 }
