--- a/apps/api-hono/.env
+++ b/apps/api-hono/.env
@@ -26,3 +26,12 @@ TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
 RESEND_API_KEY=""
 
 RUN_CRON="0"
+
+CLOUDFLARE_ACCOUNT_ID="hello"
+CLOUDFLARE_R2_ACCESS_KEY_ID="hello"
+CLOUDFLARE_R2_SECRET_ACCESS_KEY="hello"
+CLOUDFLARE_R2_USER_UPLOADS_PUBLIC_ORIGIN="hello"
+CLOUDFLARE_R2_USER_UPLOADS_BUCKET_NAME="hello"
+CLOUDFLARE_PURGE_CACHE_ZONE_ID="hello"
+CLOUDFLARE_PURGE_CACHE_TOKEN="hello"
+FAKE_CDN_FOLDER="../../FAKE_CDN/"
