--- a/apps/api-hono/.env
+++ b/apps/api-hono/.env
@@ -27,7 +27,7 @@ RESEND_API_KEY=""
 
 RUN_CRON="0"
 
-CLOUDFLARE_ACCOUNT_ID="hello"
+CLOUDFLARE_R2_ACCOUNT_ID="hello"
 CLOUDFLARE_R2_ACCESS_KEY_ID="hello"
 CLOUDFLARE_R2_SECRET_ACCESS_KEY="hello"
 CLOUDFLARE_R2_USER_UPLOADS_PUBLIC_ORIGIN="fake-cdn.cart5dev.com"
