--- a/packages/db/.env
+++ b/packages/db/.env
@@ -4,3 +4,12 @@ TURSO_DB_URL="hello"
 TURSO_DB_TOKEN="hello"
 # PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
 TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
+
+CLOUDFLARE_R2_ACCOUNT_ID="hello"
+CLOUDFLARE_R2_ACCESS_KEY_ID="hello"
+CLOUDFLARE_R2_SECRET_ACCESS_KEY="hello"
+CLOUDFLARE_R2_USER_UPLOADS_PUBLIC_ORIGIN="fake-cdn.cart5dev.com"
+CLOUDFLARE_R2_USER_UPLOADS_BUCKET_NAME="hello"
+CLOUDFLARE_PURGE_CACHE_ZONE_ID="hello"
+CLOUDFLARE_PURGE_CACHE_TOKEN="hello"
+FAKE_CDN_FOLDER="../../FAKE_CDN/"
