--- a/apps/web-astro/package.json
+++ b/apps/web-astro/package.json
@@ -16,6 +16,7 @@
     "@astrojs/node": "^9.1.3",
     "lucide-vue-next": "^0.475.0",
     "@dotenvx/dotenvx": "^1.32.0",
+    "sharp": "^0.34.0",
     "@vee-validate/zod": "^4.14.7",
     "@libsql/client": "^0.14.0",
     "@sentry/astro": "^9.8.0",
