--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -13,6 +13,7 @@
 		"@hono/node-server": "^1.13.7",
 		"@hono/zod-validator": "^0.4.1",
 		"@libsql/client": "^0.14.0",
+		"libphonenumber-js": "^1.11.18",
 		"@libsql/linux-x64-gnu": "0.5.0-pre.5",
 		"@node-rs/argon2": "^2.0.0",
 		"sharp": "^0.34.0",
