Add phone validation form and SMS code verification components

--- a/packages/ui-shadcn-vue/tsconfig.app.json
+++ b/packages/ui-shadcn-vue/tsconfig.app.json
@@ -30,6 +30,9 @@
       ],
       "@api-client/*": [
         "../api-client/src/*"
+      ],
+      "@api-hono/*": [
+        "../../apps/api-hono/src/*"
       ]
     },
     "noUnusedLocals": true,
