--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -13,10 +13,8 @@
 		"@hono/node-server": "^1.13.7",
 		"@hono/zod-validator": "^0.4.1",
 		"@libsql/client": "^0.14.0",
-		"libphonenumber-js": "^1.11.18",
 		"@libsql/linux-x64-gnu": "0.5.0-pre.5",
 		"@node-rs/argon2": "^2.0.0",
-		"sharp": "^0.34.0",
 		"@oslojs/binary": "^1.0.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "1.1.0",
@@ -30,6 +28,9 @@
 		"esbuild": "^0.24.0",
 		"hono": "^4.6.12",
 		"lib": "workspace:*",
+		"libphonenumber-js": "^1.11.18",
+		"sharp": "^0.34.0",
+		"stripe": "^18.0.0",
 		"toucan-js": "^4.1.1",
 		"tsx": "^4.19.2",
 		"uqr": "^0.1.2",
