Add payment methods utility function and refactor PaymentMethods component; improve payment method selection logic and icon handling

--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -32,7 +32,10 @@
     "paths": {
       "@lib/*": [
         "./src/*"
-      ]
+      ],
+      "@db/*": [
+        "../db/src/*"
+      ],
     },
     // Report errors for fallthrough cases in switch statements
     "noFallthroughCasesInSwitch": true,
