Refactor checkout components to expose computed properties; update payment method descriptions and add geocode distance validation

--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -36,6 +36,9 @@
       "@db/*": [
         "../db/src/*"
       ],
+      "@api-hono/*": [
+        "../../apps/api-hono/src/*"
+      ],
     },
     // Report errors for fallthrough cases in switch statements
     "noFallthroughCasesInSwitch": true,
