--- a/apps/orders-spa-vue/package.json
+++ b/apps/orders-spa-vue/package.json
@@ -15,14 +15,9 @@
     "@dotenvx/dotenvx": "^1.32.0",
     "@sentry/vue": "^9.8.0",
     "@sentry/vite-plugin": "^3.2.2",
-    "@types/google.maps": "^3.58.1",
-    "@types/leaflet": "^1.9.16",
-    "@types/leaflet-draw": "^1.0.11",
     "@types/node": "^22.10.1",
-    "@vee-validate/zod": "^4.14.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^12.0.0",
     "api-client": "workspace:*",
     "autoprefixer": "^10.4.20",
     "http-server": "^14.1.1",
@@ -31,13 +26,10 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "ui-shadcn-vue": "workspace:*",
-    "vee-validate": "^4.14.7",
     "vite": "^6.0.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.0",
-    "vuedraggable": "^4.1.0",
-    "wrangler": "^4.3.0",
-    "zod": "^3.23.8"
+    "wrangler": "^4.3.0"
   }
 }
