--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -39,6 +39,9 @@
       "@api-hono/*": [
         "../../apps/api-hono/src/*"
       ],
+      "@api-client/*": [
+        "../api-client/src/*"
+      ]
     },
     // Report errors for fallthrough cases in switch statements
     "noFallthroughCasesInSwitch": true,
