--- a/apps/orders-spa-vue/package.json
+++ b/apps/orders-spa-vue/package.json
@@ -29,6 +29,7 @@
     "vite": "^6.0.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "@types/nw.js": "^0.92.0",
     "vue-tsc": "^2.2.0",
     "wrangler": "^4.3.0"
   }
