--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,9 @@
-[phases.setup]
-nixPkgs = ['...', 'awscli2']
+# [phases.setup]
+# nixPkgs = ['...', 'awscli2']
 
 [phases.build]
 cmds = [
-    '...', 
+    '...',
     'pnpm run cf:pages:deploy'
     # Purge cache on production after build
     # 'cd apps/proxy-caddy && pnpm prod:cache:purge'
