Integrate Sentry for error tracking: initialize global Sentry client and update error handling in order processing

--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -21,6 +21,7 @@
 		"@oslojs/encoding": "1.1.0",
 		"@oslojs/otp": "^1.1.0",
 		"@sentry/esbuild-plugin": "^3.2.2",
+		"@sentry/node": "^9.19.0",
 		"@types/google.maps": "^3.58.1",
 		"@types/node": "^22.10.1",
 		"api-client": "workspace:*",
