Refactor error handling and improve user feedback: update error logging in errorHandler, enhance online payment order processing, and adjust autoprint device pairing logic

--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -38,6 +38,9 @@
       ],
       "@api-hono/*": [
         "../../apps/api-hono/src/*"
+      ],
+      "@api-client/*": [
+        "../api-client/src/*"
       ]
     },
     // Report errors for fallthrough cases in switch statements
