Refactor deployment scripts: remove unused cf:pages:deploy commands and update start scripts to use PM2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,6 @@
                # Reload environment variables for current session
                source /etc/profile.d/app_env.sh
 
-
                pnpm i
                pnpm run build
-              #  pnpm run cf:pages:deploy
-              #  pnpm start
+               pnpm start
