--- a/apps/auth-frontend-vue/package.json
+++ b/apps/auth-frontend-vue/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "dotenvx run -- vite --port 3001",
     "dev:caddy": "pnpm dev",
-    "build": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build",
+    "build": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build && pnpm cf:pages:deploy",
     "builddev": "dotenvx run -f .env.production -- vue-tsc -b && dotenvx run -f .env.production -- vite build",
     "cf:pages:deploy": "dotenvx run -f .env.production -- wrangler pages deploy dist --project-name=cart5-auth-frontend-prod --branch=main --no-bundle",
-    "start": "http-server dist -s -p 3001 -a 0.0.0.0 -d false --log-ip false --gzip --brotli --proxy http://127.0.0.1:3001? -c 120"
+    "start": "pm2 reload ./ecosystem.config.cjs --update-env && pm2 save",
+    "old_start": "http-server dist -s -p 3001 -a 0.0.0.0 -d false --log-ip false --gzip --brotli --proxy http://127.0.0.1:3001? -c 120"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.32.0",
@@ -23,6 +24,7 @@
     "autoprefixer": "^10.4.20",
     "http-server": "^14.1.1",
     "lib": "workspace:*",
+    "pm2": "^6.0.6",
     "lucide-vue-next": "^0.475.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
