--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@
 [phases.build]
 cmds = [
     '...',
-    'pnpm run cf:pages:deploy'
+    # 'pnpm run cf:pages:deploy'
     # Purge cache on production after build
     # 'cd apps/proxy-caddy && pnpm prod:cache:purge'
 ]
