Add PM2 configuration and update start script for improved process management

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "builddev": "turbo builddev --force",
     "dev": "turbo dev",
     "dev:caddy": "turbo dev:caddy",
-    "start": "turbo start --concurrency=1",
+    "start": "./start.sh",
+    "_start": "turbo start",
     "generate:sql": "cd packages/db && pnpm generate:sql",
     "prod:migrate": "cd packages/db && pnpm prod:migrate",
     "test:prod:migrate": "cd packages/db && pnpm test:prod:migrate",
