--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo dev",
     "dev:caddy": "turbo dev:caddy",
     "start": "./start.sh",
-    "_start": "turbo start",
+    "old_start": "turbo start",
     "generate:sql": "cd packages/db && pnpm generate:sql",
     "prod:migrate": "cd packages/db && pnpm prod:migrate",
     "test:prod:migrate": "cd packages/db && pnpm test:prod:migrate",
