Refactor start.sh to streamline pm2 reload commands and update turbo.json outputs to include start.sh

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
         "^build"
       ],
       "outputs": [
-        "dist/**"
+        "dist/**",
+        "start.sh"
       ]
     },
     "dev": {
