Update turbo.json outputs to include ecosystem.config.cjs

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,8 @@
       ],
       "outputs": [
         "dist/**",
-        "start.sh"
+        "start.sh",
+        "ecosystem.config.cjs"
       ]
     },
     "dev": {
