Update environment variable paths for Turso embedded databases and adjust turbo.json outputs

--- a/turbo.json
+++ b/turbo.json
@@ -12,9 +12,7 @@
         "^build"
       ],
       "outputs": [
-        "dist/**",
-        "start.sh",
-        "ecosystem.config.cjs"
+        "dist/**"
       ]
     },
     "dev": {
