--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -14,8 +14,9 @@
 		"@dotenvx/dotenvx": "^1.32.0",
 		"@hono/node-server": "^1.13.7",
 		"@hono/zod-validator": "^0.4.1",
-		"@libsql/client": "^0.14.0",
-		"@libsql/linux-x64-gnu": "0.5.0-pre.5",
+		"@libsql/client": "^0.15.6",
+		"@libsql/darwin-arm64": "0.5.10",
+		"@libsql/linux-x64-gnu": "0.5.10",
 		"@node-rs/argon2": "^2.0.0",
 		"@oslojs/binary": "^1.0.0",
 		"@oslojs/crypto": "^1.0.1",
