--- a/apps/web-astro/package.json
+++ b/apps/web-astro/package.json
@@ -19,7 +19,9 @@
     "@dotenvx/dotenvx": "^1.32.0",
     "sharp": "^0.34.0",
     "@vee-validate/zod": "^4.14.7",
-    "@libsql/client": "^0.14.0",
+    "@libsql/client": "^0.15.6",
+    "@libsql/darwin-arm64": "0.5.10",
+    "@libsql/linux-x64-gnu": "0.5.10",
     "@sentry/astro": "^9.8.0",
     "api-client": "workspace:*",
     "vee-validate": "^4.14.7",
