Add RUST_BACKTRACE=1 to production environment files for debugging

--- a/apps/api-hono/.env.production
+++ b/apps/api-hono/.env.production
@@ -8,6 +8,7 @@ DOTENV_PUBLIC_KEY_PRODUCTION="03a458e54d25226cb3c0dfaf2688b3589b4cb9b059c7b3a4fd
 
 # .env.production
 NODE_ENV="production"
+RUST_BACKTRACE=1
 
 PUBLIC_DOMAIN_NAME="cart5.com"
 KNOWN_DOMAINS_REGEX="^(.*\.)?cart5\.com$"
