Update environment paths for embedded database replicas and clean up initialization logic

--- a/apps/api-hono/.env
+++ b/apps/api-hono/.env
@@ -21,7 +21,7 @@ GOOGLE_OAUTH_REDIRECT_URI="http://localhost:3001/__p_api/auth/google_oauth/callb
 TURSO_DB_URL="hello"
 TURSO_DB_TOKEN="hello"
 # PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
-TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
+TURSO_EMBEDDED_DB_PATH="../../TURSO_EMBEDDED_REPLICA/API_HONO/"
 
 RESEND_API_KEY=""
 
