--- a/apps/web-astro/.env
+++ b/apps/web-astro/.env
@@ -4,7 +4,7 @@ PUBLIC_DOMAIN_NAME="cart5dev.com"
 TURSO_DB_URL="hello"
 TURSO_DB_TOKEN="hello"
 # PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
-TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
+TURSO_EMBEDDED_DB_PATH="../../TURSO_EMBEDDED_REPLICA/WEB_ASTRO/"
 
 PUBLIC_CLOUDFLARE_R2_PUBLIC_HOST="fake-cdn.cart5dev.com"
 
