--- a/packages/db/.env
+++ b/packages/db/.env
@@ -3,7 +3,7 @@ NODE_ENV="development"
 TURSO_DB_URL="hello"
 TURSO_DB_TOKEN="hello"
 # PROD only, https://docs.turso.tech/features/embedded-replicas/introduction
-TURSO_EMBEDDED_DB_PATH="/prod/only/persistent/path/to/embedded.db"
+TURSO_EMBEDDED_DB_PATH="../../TURSO_EMBEDDED_REPLICA/PCK_DB/"
 
 PUBLIC_CLOUDFLARE_R2_PUBLIC_HOST="fake-cdn.cart5dev.com"
 
